change gc settings